--- a/src/main/resources/deu/swe2/tableorder/TableManagerUI.fxml
+++ b/src/main/resources/deu/swe2/tableorder/TableManagerUI.fxml
@@ -12,12 +12,12 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="deu.swe2.tableorder.boundary.TableManagerUI">
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
     <center>
-        <GridPane alignment="CENTER" hgap="10.0" vgap="10.0" BorderPane.alignment="CENTER">
+        <GridPane fx:id="tableGrid" alignment="CENTER" hgap="10.0" vgap="10.0" BorderPane.alignment="CENTER">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -34,7 +34,6 @@
             <TitledPane prefHeight="200.0" prefWidth="200.0" text="1번 테이블" />
             <TitledPane prefHeight="200.0" prefWidth="200.0" text="2번 테이블" GridPane.columnIndex="1" />
             <TitledPane prefHeight="200.0" prefWidth="200.0" text="3번 테이블" GridPane.rowIndex="1" />
-            <TitledPane prefHeight="200.0" prefWidth="200.0" text="4번 테이블" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TitledPane prefHeight="200.0" prefWidth="200.0" text="5번 테이블" GridPane.rowIndex="2" />
          </children>
         </GridPane>
