--- a/src/main/resources/deu/swe2/tableorder/TableViewUI.fxml
+++ b/src/main/resources/deu/swe2/tableorder/TableViewUI.fxml
@@ -10,14 +10,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
 
-<VBox alignment="CENTER" prefHeight="586.0" prefWidth="712.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.HelloController">
+<VBox alignment="CENTER" prefHeight="586.0" prefWidth="712.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="deu.swe2.tableorder.boundary.TableViewBoundary">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
     <children>
         <Pane prefHeight="88.0" prefWidth="672.0">
             <children>
-                <Button layoutX="57.0" layoutY="28.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="88.0" text="테이블 관리" />
+                <Button layoutX="57.0" layoutY="28.0" mnemonicParsing="false"
+                        prefHeight="33.0" prefWidth="88.0" text="테이블 관리"
+                        onAction="#handleTableManage"/>
                 <Button layoutX="522.0" layoutY="28.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="88.0" text="특선 전환" />
                 <Button layoutX="206.0" layoutY="28.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="88.0" text="메뉴 관리" />
                 <Button layoutX="360.0" layoutY="28.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="88.0" text="매출 관리" />
